# 0xAuction

./: .gitignore  NOTICE.md  README.md  auction.rsh  index.js  index.rsh  package-lock.json  package.json
.reach/smt-cache/: 1137410109  1139224315  114333704  1371364642  1512880519  1727593559  1820249056  2036252165  2108515758  2298509652  2630342412  3136741809  3217078335  3364222444  3686175611  3791205740  3968861157  4027546724  4199852750  535296938  610064915  78415310  823662092  903933056  916586508
0xAuction_devnet/: index.mjs
Algorand-NFT-SDK/: README.md
Algorand-NFT-SDK/javaScript-sdk/: README.md  index.js  package.json  testnet.js
Algorand-NFT-SDK/python-algorand-sdk/: LICENSE  README.md  setup.cfg
Algorand-NFT-SDK/python-algorand-sdk/ap_python_algorand_nft_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Algorand-NFT-SDK/python-algorand-sdk/examples/: examples.py
Algorand-NFT-SDK/python-algorand-sdk/py_algorand_nft_sdk.egg-info/: PKG-INFO  SOURCES.txt
Algorand-NFT-SDK/python-algorand-sdk/py_sdk/: betanet.py  mainnet.py  requirements.txt  testnet.py
devnet/: index.mjs  package.json
public/: index.html  manifest.json
remote_test/: auction.rsh  index.mjs  index.rsh  package.json
src/: index.js
src/ARC69/: arc.js
src/context/: ReachContext.js
src/contracts/: auction.rsh  index.rsh
src/hooks/: fmtClasses.js  index.js
src/layouts/: renderViews.jsx
src/styles/: Alert.module.css  App.module.css  Auction.module.css  Buy.module.css  ConnectAccount.module.css  CreateAndSell.module.css  Global.module.css  Sell.module.css  (+2 more)
(+19 files in other folders)
