[metadata]
name = py_algorand_nft_sdk
version = 0.0.1
author = Apostrophe Corp
author_email = goonerlabs@gmail.com
description = For creating and updating NFTs on the algorand testnet, devnet, betanet and mainet networks. Can also be used to generate accounts on the afore mentioned networks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Apostrophe-Corp/Algorand-NFT-SDK/tree/main/ap-python_algorand_nft_sdk
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
include_package_data = True